--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
+<!doctype html>
+
+<body>
 <iframe src="https://prezi.com/p/embed/PVgIlgecjUVvChUlwbcz/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="315" width="560"></iframe>
+</body>
