--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 
 <body>
-<iframe src="https://prezi.com/p/embed/PVgIlgecjUVvChUlwbcz/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="315" width="560"></iframe>
+<iframe src="https://prezi.com/p/embed/PVgIlgecjUVvChUlwbcz/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="90%" width="90%"></iframe>
 </body>
