--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
 <body>
-  See the full story below
+  See the full story below <br>
 <iframe src="https://prezi.com/p/embed/PVgIlgecjUVvChUlwbcz/" id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" allow="autoplay; fullscreen" height="315" width="560"></iframe>
 </body>
